maze.lessons.maze.island.IslandMaze.scala.error
Escaper:13: error: value HORD is not a member of object plm.universe.Direction
	if(getDirection==Direction.HORD){avance()}
                                   ^