maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
def keepHandOnSideWall(){
	gauche();
	if(estFaceMur){
		droite(); if(estFaceMur){
			droite(); if(estFaceMur){
				droite()}else{avance}
			}else{avance}
		}else{avance}
	}
def trouveNord(){
	if(getDirection==Direction.HORD){avance()}
}

var etat = 0

while(estSurBiscuit==false){
etat match{
	case 0 => trouveNord()
			if(estFaceMur()==true && getDirection()==Direction.NORD){
				etat=1
			}
	case 1 => keepHandOnSideWall()
			if(getDirection()==Direction.NORD){
				etat=0
			}
}
}
}


